--- a/claseVideo/index.html
+++ b/claseVideo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.8">
-    <title>Video</title>
+    <title>Video test</title>
 </head>
 <body>
 <main>
