feat: :sparkles: Add video

--- a/claseVideo/index.html
+++ b/claseVideo/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.8">
-    <title>Video test</title>
+    <title>Video</title>
 </head>
 <body>
-<main>
-  <section>
-    <video src=""></video>
-  </section>
-</main>
+    <main>
+     <section>
+         <video controls preload="auto"
+                 <source src="./videoTest.mp4#t10,60">
+         </video>
+     </section>
+    </main>
 </body>
 </html>
