feat: :sparkles: Tags

--- a/claseVideo/index.html
+++ b/claseVideo/index.html
@@ -8,8 +8,8 @@
 <body>
     <main>
      <section>
-         <video controls preload="auto"
-                 <source src="./videoTest.mp4#t10,60">
+         <video controls preload="auto">
+            <source src="./videoTest.mp4">
          </video>
      </section>
     </main>
