Feat: :sparkles: Added button and list

--- a/classCalendar/index-calendar.html
+++ b/classCalendar/index-calendar.html
@@ -10,20 +10,21 @@
     <form action="">
       <label for="name">
         <span>What is your name?</span>
-        <input type="text" id="name" name="">
+        <input type="text" id="name" name="name" autocomplete="name" required>
       </label>
       <label for="email">
         <span>What is your e-mail adress?</span>
-        <input type="email" id="email" name="">
+        <input type="email" id="email" name="email" autocomplete="email" required>
       </label>
       <label for="country">
         <span>Which is your country?</span>
-        <input type="text" id="country" name="">
+        <input type="text" id="country" name="country" autocomplete="country" required>
       </label>
       <label for="zipCode">
         <span>What is your zip code?</span>
-        <input type="text" id="zipCode" name="">
+        <input type="text" id="zipCode" name="zipCode" autocomplete="postal-code" required>
       </label>
+      <input type="submit">
     </form>
   </main>
 </body>
