Feat: :sparkles: CSS combinators

--- a/classCombinators/index.html
+++ b/classCombinators/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Combinators</title>
+    <meta name="viewpoint" content="width=device-width, initial-scale:1.8">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-$END$
+    <div>
+        <article>
+            <p>Paragraph</p>
+        </article>
+        <article>
+            <p>Paragraph</p>
+        </article>
+        <section>
+            <div>
+                <p>Paragraph</p>
+            </div>
+        </section>
+        <p>Paragraph</p>
+    </div>
 </body>
 </html>
