--- a/classSpecify&Order/index.html
+++ b/classSpecify&Order/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewpoint" content="width=device-width, initial-scale:1.8">
+    <title>Demo</title>
+    <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-$END$
+    <header class="page-header">
+        <h1 id="page-title" class="title">Demo</h1>
+        <nav>
+            <ul id="main-nav" class="nav">
+                <li><a href="">Home</a></li>
+                <li><a href="">Courses</a></li>
+                <li><a href="" >Instructors</a></li>
+                <li><a href="" class="blog">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+    </main>
 </body>
 </html>
